refactor to use jar url rather than exploding the war